--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   }
 }
-
